[metadata]
name = nh_tools
version = 0.1.0
description = helpful toolkit for creating python scripts and packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikohonu/nh_tools
author = Niko Honu
author_email = nikohonu@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = nh_tools
install_requires =
python_requires = >=3.10.1
